[gd_scene load_steps=6 format=2]

[ext_resource path="res://asset/Pictures/starship.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Player.shader" type="Shader" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 136.335

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/energy = 0.5

[node name="Player" type="Node2D"]
scale = Vector2( 0.3, 0.3 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -3, 26 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="FiringsPosition" type="Node2D" parent="."]

[node name="LeftGun" type="Node2D" parent="FiringsPosition"]
position = Vector2( -80, 0 )

[node name="RightGun" type="Node2D" parent="FiringsPosition"]
position = Vector2( 80, 0 )

[node name="FireTimer" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource( 3 )
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnergyTimer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
